quito fondo de imagen

--- a/index.html
+++ b/index.html
@@ -21,7 +21,10 @@
     <link rel="stylesheet" href="./estilos/estilos.css">
 </head>
 
+
+
 <body>
+
 
     <header class="header">
         <div class="headerLogo">
@@ -55,142 +58,157 @@
 
     </header>
 
-    <section>
-        <div class="carruselAdaptado">
 
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
-                        class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
-                        aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
-                        aria-label="Slide 3"></button>
+    <div class="fondoNuevo">
+        <section>
+            <div class="carruselAdaptado">
+
+                <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                    <div class="carousel-indicators">
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0"
+                            class="active" aria-current="true" aria-label="Slide 1"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+                            aria-label="Slide 2"></button>
+                        <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+                            aria-label="Slide 3"></button>
+                    </div>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <img src="./Imagenes/noreuga.jpg" class="d-block w-100" alt="Paisaje verde">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Imagenes/noruega2.png" class="d-block w-100" alt="paisajeagua">
+                        </div>
+                        <div class="carousel-item">
+                            <img src="./Imagenes/noruega3.png" class="d-block w-100" alt="paisajenocturno">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="prev">
+                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
+                        data-bs-slide="next">
+                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                        <span class="visually-hidden">Next</span>
+                    </button>
+
+
+
                 </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="./Imagenes/noreuga.jpg" class="d-block w-100" alt="Paisaje verde">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./Imagenes/noruega2.png" class="d-block w-100" alt="paisajeagua">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./Imagenes/noruega3.png" class="d-block w-100" alt="paisajenocturno">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators"
-                    data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
-
-
-
             </div>
+
+        </section>
+
+        <div class="fondoCompleto">
+            <main>
+
+                <div>
+                    <section id="historia" class="historia">
+
+
+                        <h2>Historia</h2>
+                        <p>La hidromiel es la bebida alcohólica más antigua de la humanidad. Los historiadores
+                            antropólogos
+                            datan la
+                            primera prueba directa de su consumo en torno al 8000 a.C a partir de restos arqueológicos
+                            de
+                            cerámicas
+                            y
+                            cuernos con restos de levaduras y polen, encontrados en China y Alemania.</p>
+
+
+                        <p>Se considera que es la primera de las bebidas alcohólicas que consumió el ser humano y se
+                            cree
+                            que es
+                            precursora de la cerveza.3​ El hidromiel es una bebida histórica cuya preparación se
+                            fundamenta
+                            en
+                            la
+                            fermentación de una mezcla de agua y miel, que alcanza cierta graduación alcohólica que
+                            varía
+                            según
+                            la
+                            relación de miel/agua y la tolerancia de las levaduras al alcohol. Su uso fue fuertemente
+                            difundido
+                            por
+                            los pueblos de la antigüedad.En Europa, lo hicieron y lo bebieron
+                            los griegos, romanos, celtas, sajones y vikingos.
+                            Para
+                            los mayas era una bebida sagrada utilizada en ceremonias religiosas y además consideraban
+                            que
+                            tenía
+                            propiedades medicinales, específicamente para tratar infecciones estomacales y utilizada
+                            como laxante.
+                            En
+                            algunas de estas culturas era usado para elogiar a héroes y escogidos.
+                        </p>
+
+
+                    </section>
+            </main>
+
+            <section id='nosotros' class="nosotros">
+                <h2>Nosotros</h2>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                    et
+                    dolore
+                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+                    ea
+                    commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                    fugiat
+                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
+                    mollit
+                    anim id est laborum.</p>
+                </br>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum molestiae optio sapiente nesciunt. Aut
+                    sit
+                    dolorum consequuntur fugit illum nulla maiores, quis quod rem dicta ducimus. Incidunt est dolor
+                    unde!
+                </p>
+            </section>
+
+            <section id='produccion' class="produccion">
+                <h2>Produccion</h2>
+                <div class="produccionCaja">
+                    <div>
+
+                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque est libero veritatis expedita
+                            alias
+                            velit
+                            ipsam at dolor culpa ipsa, pariatur soluta neque quis numquam praesentium cum doloremque sed
+                            minus!
+                        </p>
+                        </br>
+                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores qui facere, expedita
+                            delectus
+                            eveniet
+                            ullam
+                            atque at? Pariatur laudantium est amet aperiam debitis, facilis velit consequuntur, illum
+                            deserunt
+                            voluptate
+                            magni?</p>
+                    </div>
+                    <div>
+                        <h3> El paso a paso en video</h3>
+
+                        <div class="videoAdaptado">
+
+                            <iframe width="560" height="315" src="https://www.youtube.com/embed/QwO8vQNec20"
+                                title="YouTube video player" frameborder="0"
+                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                allowfullscreen></iframe>
+
+                        </div>
+
+                    </div>
+                </div>
+
+
+            </section>
+
         </div>
-
-    </section>
-
-    <div class="fondoCompleto">
-        <main>
-
-            <div>
-                <section id="historia" class="historia">
-
-
-                    <h2>Historia</h2>
-                    <p>La hidromiel es la bebida alcohólica más antigua de la humanidad. Los historiadores antropólogos
-                        datan la
-                        primera prueba directa de su consumo en torno al 8000 a.C a partir de restos arqueológicos de
-                        cerámicas
-                        y
-                        cuernos con restos de levaduras y polen, encontrados en China y Alemania.</p>
-
-
-                    <p>Se considera que es la primera de las bebidas alcohólicas que consumió el ser humano y se cree
-                        que es
-                        precursora de la cerveza.3​ El hidromiel es una bebida histórica cuya preparación se fundamenta
-                        en
-                        la
-                        fermentación de una mezcla de agua y miel, que alcanza cierta graduación alcohólica que varía
-                        según
-                        la
-                        relación de miel/agua y la tolerancia de las levaduras al alcohol. Su uso fue fuertemente
-                        difundido
-                        por
-                        los pueblos de la antigüedad.En Europa, lo hicieron y lo bebieron
-                        los griegos, romanos, celtas, sajones y vikingos.
-                        Para
-                        los mayas era una bebida sagrada utilizada en ceremonias religiosas y además consideraban que
-                        tenía
-                        propiedades medicinales, específicamente para tratar infecciones estomacales y utilizada
-                        como laxante.
-                        En
-                        algunas de estas culturas era usado para elogiar a héroes y escogidos.
-                    </p>
-
-
-                </section>
-        </main>
-
-        <section id='nosotros' class="nosotros">
-            <h2>Nosotros</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-                dolore
-                magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                fugiat
-                nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                mollit
-                anim id est laborum.</p>
-            </br>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum molestiae optio sapiente nesciunt. Aut sit
-                dolorum consequuntur fugit illum nulla maiores, quis quod rem dicta ducimus. Incidunt est dolor unde!
-            </p>
-        </section>
-
-        <section id='produccion' class="produccion">
-            <h2>Produccion</h2>
-            <div class="produccionCaja">
-                <div>
-
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque est libero veritatis expedita
-                        alias
-                        velit
-                        ipsam at dolor culpa ipsa, pariatur soluta neque quis numquam praesentium cum doloremque sed
-                        minus!
-                    </p>
-                    </br>
-                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores qui facere, expedita delectus
-                        eveniet
-                        ullam
-                        atque at? Pariatur laudantium est amet aperiam debitis, facilis velit consequuntur, illum
-                        deserunt
-                        voluptate
-                        magni?</p>
-                </div>
-                <div>
-                    <h3> El paso a paso en video</h3>
-
-                    <div class="videoAdaptado">
-
-                        <iframe width="560" height="315" src="https://www.youtube.com/embed/QwO8vQNec20"
-                            title="YouTube video player" frameborder="0"
-                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                            allowfullscreen></iframe>
-
-                    </div>
-
-                </div>
-            </div>
-
-
-        </section>
 
     </div>
 
