--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -48,127 +48,128 @@
 
 
 
+    <div class="fondoNuevo">
+        <section class="contacto">
 
-    <section class="contacto">
+            <h3> Contactanos </h3>
 
-        <h3> Contactanos </h3>
-
-        <div class="accordion accordion-flush" id="accordionFlushExample">
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingOne">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                        Telefono de contacto directo
-                    </button>
-                </h2>
-                <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
-                    data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">
-                        <div class="datosContacto">
-                            <i class="fas fa-phone-square">
-                                <p>Telefono: +54 3512075102</p>
-                            </i>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingTwo">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
-                        Email de contacto
-                    </button>
-                </h2>
-                <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
-                    data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">
-                        <div class="datosContacto">
-
-                            <i class="fas fa-envelope">
-                                <p>Email: freyrhidromiel@gmail.com</p>
-                            </i>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="accordion-item">
-                <h2 class="accordion-header" id="flush-headingThree">
-                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
-                        data-bs-target="#flush-collapseThree" aria-expanded="false" aria-controls="flush-collapseThree">
-                        Instagram
-                    </button>
-                </h2>
-                <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree"
-                    data-bs-parent="#accordionFlushExample">
-                    <div class="accordion-body">
-                        <div class="datosContacto">
-
-                            <a href="https://www.instagram.com/freyrhidromiel/">
-                                <i class="fab fa-instagram-square">
-                                    <p>Instagram: @freyrhidromiel</p>
+            <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                            Telefono de contacto directo
+                        </button>
+                    </h2>
+                    <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            <div class="datosContacto">
+                                <i class="fas fa-phone-square">
+                                    <p>Telefono: +54 3512075102</p>
                                 </i>
-                            </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingTwo">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseTwo" aria-expanded="false" aria-controls="flush-collapseTwo">
+                            Email de contacto
+                        </button>
+                    </h2>
+                    <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo"
+                        data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            <div class="datosContacto">
+
+                                <i class="fas fa-envelope">
+                                    <p>Email: freyrhidromiel@gmail.com</p>
+                                </i>
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="accordion-item">
+                    <h2 class="accordion-header" id="flush-headingThree">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                            data-bs-target="#flush-collapseThree" aria-expanded="false"
+                            aria-controls="flush-collapseThree">
+                            Instagram
+                        </button>
+                    </h2>
+                    <div id="flush-collapseThree" class="accordion-collapse collapse"
+                        aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body">
+                            <div class="datosContacto">
+
+                                <a href="https://www.instagram.com/freyrhidromiel/">
+                                    <i class="fab fa-instagram-square">
+                                        <p>Instagram: @freyrhidromiel</p>
+                                    </i>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-
-    </section>
-
-
-
-
-    <section>
-        <h2 class="contac">Nos podes encontrar </h2>
-
-
-        <iframe
-            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3405.6686900508066!2d-64.1915822848524!3d-31.395697681411068!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7195f06073871677!2sFreyr%20Hidromiel!5e0!3m2!1ses-419!2sar!4v1636553805787!5m2!1ses-419!2sar"
-            width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </section>
-
-    <!--FORMULARIO DE CONTACTO-->
-
-    <div class="formularioCuerpo">
-
-        <h4>Si estas interesado tener nuestras ultimas noticias por email registrate en este formulario</h4>
-
-        <section id="contacto" class="contacto">
-
-
-
-            <form action="/" method="post">
-                <fieldset>
-                    <legend>Formulario de Suscripcion</legend>
-
-
-                    <label for="nombre">Nombre</label>
-                    <input id="nombre" type="text" placeholder="Ingrese su nombre">
-
-                    <label for="email">Email</label>
-                    <input id="email" type="email" required placeholder="ejemplo@gmail.com">
-
-                    <label for="consulta">Consulta</label>
-                    <input id="consulta" type="text">
-
-
-
-
-                    <input type="submit" value="Enviar Formulario">
-                    <input type="reset" value="Resetear Formulario">
-
-                </fieldset>
-
-
-            </form>
 
         </section>
 
+
+
+
+        <section>
+            <h2 class="contac">Nos podes encontrar </h2>
+
+
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3405.6686900508066!2d-64.1915822848524!3d-31.395697681411068!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7195f06073871677!2sFreyr%20Hidromiel!5e0!3m2!1ses-419!2sar!4v1636553805787!5m2!1ses-419!2sar"
+                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </section>
+
+        <!--FORMULARIO DE CONTACTO-->
+
+        <div class="formularioCuerpo">
+
+            <h4>Si estas interesado tener nuestras ultimas noticias por email registrate en este formulario</h4>
+
+            <section id="contacto" class="contacto">
+
+
+
+                <form action="/" method="post">
+                    <fieldset>
+                        <legend>Formulario de Suscripcion</legend>
+
+
+                        <label for="nombre">Nombre</label>
+                        <input id="nombre" type="text" placeholder="Ingrese su nombre">
+
+                        <label for="email">Email</label>
+                        <input id="email" type="email" required placeholder="ejemplo@gmail.com">
+
+                        <label for="consulta">Consulta</label>
+                        <input id="consulta" type="text">
+
+
+
+
+                        <input type="submit" value="Enviar Formulario">
+                        <input type="reset" value="Resetear Formulario">
+
+                    </fieldset>
+
+
+                </form>
+
+            </section>
+
+        </div>
+
     </div>
-
-
 
     <footer>
 
