--- a/pages/produccion.html
+++ b/pages/produccion.html
@@ -54,51 +54,55 @@
 
     </header>
 
-    <section id='produccion' class="produccion">
-        <h2>Produccion</h2>
-        <div class="produccionCaja">
-            <div>
+    <div class="fondoNuevo">
+        <section id='produccion' class="produccion">
+            <h2>Produccion</h2>
+            <div class="produccionCaja">
+                <div>
 
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque est libero veritatis expedita alias
-                    velit
-                    ipsam at dolor culpa ipsa, pariatur soluta neque quis numquam praesentium cum doloremque sed minus!
-                </p>
-                </br>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores qui facere, expedita delectus
-                    eveniet
-                    ullam
-                    atque at? Pariatur laudantium est amet aperiam debitis, facilis velit consequuntur, illum deserunt
-                    voluptate
-                    magni?</p>
-            </div>
-            <div>
-                <h3> El paso a paso en video</h3>
+                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque est libero veritatis expedita
+                        alias
+                        velit
+                        ipsam at dolor culpa ipsa, pariatur soluta neque quis numquam praesentium cum doloremque sed
+                        minus!
+                    </p>
+                    </br>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores qui facere, expedita delectus
+                        eveniet
+                        ullam
+                        atque at? Pariatur laudantium est amet aperiam debitis, facilis velit consequuntur, illum
+                        deserunt
+                        voluptate
+                        magni?</p>
+                </div>
+                <div>
+                    <h3> El paso a paso en video</h3>
 
-                <div class="videoAdaptado">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/QwO8vQNec20"
-                        title="YouTube video player" frameborder="0"
-                        allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                        allowfullscreen></iframe>
+                    <div class="videoAdaptado">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/QwO8vQNec20"
+                            title="YouTube video player" frameborder="0"
+                            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
 
 
 
-    <section class="produccion">
+        <section class="produccion">
 
-        <h3> Podes ayudarnos a seguir creciendo con este proyecto</h3>
+            <h3> Podes ayudarnos a seguir creciendo con este proyecto</h3>
 
-        <div class="card carta" style="width: 18rem;">
-            <img src="../Imagenes/cafe.png" class="card-img-top" alt="cafecito app">
-            <div class="card-body">
-                <h5 class="card-title">Un cafecito para Freyr</h5>
-                <p class="card-text">Podes regalarnos un cafecito y vas a estar ayudando a nuetro proyecto a crecer!
-                </p>
-                <a href="https://cafecito.app/freyrhidromiel" class="btn btn-primary">Invitar un cafecito</a>
+            <div class="card carta" style="width: 18rem;">
+                <img src="../Imagenes/cafe.png" class="card-img-top" alt="cafecito app">
+                <div class="card-body">
+                    <h5 class="card-title">Un cafecito para Freyr</h5>
+                    <p class="card-text">Podes regalarnos un cafecito y vas a estar ayudando a nuetro proyecto a crecer!
+                    </p>
+                    <a href="https://cafecito.app/freyrhidromiel" class="btn btn-primary">Invitar un cafecito</a>
+                </div>
             </div>
-        </div>
 
 
 
@@ -106,9 +110,9 @@
 
 
 
-    </section>
+        </section>
 
-
+    </div>
 
     <footer>
 
