--- a/pages/Nosotros.html
+++ b/pages/Nosotros.html
@@ -9,10 +9,8 @@
     <title>Nosotros</title>
     <!--Google Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Cinzel:wght@400;500;600&family=Tenor+Sans&display=swap"
-        rel="stylesheet">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Cinzel:wght@400;500;600&family=Merriweather:ital,wght@0,400;1,300;1,400&family=Tenor+Sans&display=swap" rel="stylesheet">
 
 
     <!--Mi BOOTSTRAP-->
@@ -20,6 +18,7 @@
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--Mi CSS-->
     <link rel="stylesheet" href="../estilos/estilos.css">
+    <link rel="stylesheet" href="../estilos/styles.css">
 </head>
 
 <body>
