Paso todo en scss y agrego mixit

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <nav>
             <!--LISTO DESORDENADA-->
 
-           
+
 
 
 
@@ -104,10 +104,16 @@
 
         </section>
 
+
+
+        </section>
+
+
+
         <div class="fondoCompleto">
             <main>
 
-                <div>
+                <div class="cajaNotas">
                     <section id="historia" class="historia">
 
 
@@ -150,66 +156,82 @@
 
 
                     </section>
+
+                </div>
             </main>
 
-            <section id='nosotros' class="nosotros">
-                <h2>Nosotros</h2>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
-                    et
-                    dolore
-                    magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
-                    ea
-                    commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
-                    fugiat
-                    nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
-                    mollit
-                    anim id est laborum.</p>
-                </br>
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum molestiae optio sapiente nesciunt. Aut
-                    sit
-                    dolorum consequuntur fugit illum nulla maiores, quis quod rem dicta ducimus. Incidunt est dolor
-                    unde!
-                </p>
-            </section>
+            <div class="cajaNotas">
+                <section id='nosotros' class="nosotros">
+                    <h2>Nosotros</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et
+                        dolore
+                        magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                        ex
+                        ea
+                        commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                        eu
+                        fugiat
+                        nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                        deserunt
+                        mollit
+                        anim id est laborum.</p>
+                    </br>
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eum molestiae optio sapiente nesciunt.
+                        Aut
+                        sit
+                        dolorum consequuntur fugit illum nulla maiores, quis quod rem dicta ducimus. Incidunt est dolor
+                        unde!
+                    </p>
+                </section>
 
-            <section id='produccion' class="produccion">
-                <h2>Produccion</h2>
-                <div class="produccionCaja">
-                    <div>
+            </div>
 
-                        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque est libero veritatis expedita
-                            alias
-                            velit
-                            ipsam at dolor culpa ipsa, pariatur soluta neque quis numquam praesentium cum doloremque sed
-                            minus!
-                        </p>
-                        </br>
-                        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores qui facere, expedita
-                            delectus
-                            eveniet
-                            ullam
-                            atque at? Pariatur laudantium est amet aperiam debitis, facilis velit consequuntur, illum
-                            deserunt
-                            voluptate
-                            magni?</p>
-                    </div>
-                    <div>
-                        <h3> El paso a paso en video</h3>
+            <div class="cajaNotas">
+                <section id='produccion' class="produccion">
+                    <h2>Produccion</h2>
+                    <div class="produccionCaja">
+                        <div>
 
-                        <div class="videoAdaptado">
+                            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eaque est libero veritatis
+                                expedita
+                                alias
+                                velit
+                                ipsam at dolor culpa ipsa, pariatur soluta neque quis numquam praesentium cum doloremque
+                                sed
+                                minus!
+                            </p>
+                            </br>
+                            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maiores qui facere, expedita
+                                delectus
+                                eveniet
+                                ullam
+                                atque at? Pariatur laudantium est amet aperiam debitis, facilis velit consequuntur,
+                                illum
+                                deserunt
+                                voluptate
+                                magni?</p>
+                        </div>
+                        <div>
+                            <h3> El paso a paso en video</h3>
 
-                            <iframe width="560" height="315" src="https://www.youtube.com/embed/QwO8vQNec20"
-                                title="YouTube video player" frameborder="0"
-                                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-                                allowfullscreen></iframe>
+                            <div class="videoAdaptado">
+
+                                <iframe width="460" height="215" src="https://www.youtube.com/embed/QwO8vQNec20"
+                                    title="YouTube video player" frameborder="0"
+                                    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                                    allowfullscreen></iframe>
+
+                            </div>
 
                         </div>
-
                     </div>
-                </div>
 
 
-            </section>
+                </section>
+
+            </div>
 
         </div>
 
