--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -9,8 +9,10 @@
     <title>Contacto</title>
     <!--Google Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Cinzel:wght@400;500;600&family=Merriweather:ital,wght@0,400;1,300;1,400&family=Tenor+Sans&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700&family=Cinzel:wght@400;500;600&family=Merriweather:ital,wght@0,400;1,300;1,400&family=Tenor+Sans&display=swap"
+        rel="stylesheet">
 
     <!--Mi BOOTSTRAP-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -118,53 +120,62 @@
         </section>
 
 
+        <div class="produccionCaja">
+            <div class="maps">
+                <section>
+                    <h2 class="contac">Nos podes encontrar </h2>
 
 
-        <section>
-            <h2 class="contac">Nos podes encontrar </h2>
+                    <iframe
+                        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3405.6686900508066!2d-64.1915822848524!3d-31.395697681411068!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7195f06073871677!2sFreyr%20Hidromiel!5e0!3m2!1ses-419!2sar!4v1636553805787!5m2!1ses-419!2sar"
+                        width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                </section>
+
+            </div>
+
+            <!--FORMULARIO DE CONTACTO-->
 
 
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3405.6686900508066!2d-64.1915822848524!3d-31.395697681411068!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x7195f06073871677!2sFreyr%20Hidromiel!5e0!3m2!1ses-419!2sar!4v1636553805787!5m2!1ses-419!2sar"
-                width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-        </section>
+            <div class="cajaNotas">
 
-        <!--FORMULARIO DE CONTACTO-->
+                <div class="formularioCuerpo">
 
-        <div class="formularioCuerpo">
+                    <h4>Si estas interesado tener nuestras ultimas noticias por email registrate en este formulario</h4>
 
-            <h4>Si estas interesado tener nuestras ultimas noticias por email registrate en este formulario</h4>
-
-            <section id="contacto" class="contacto">
-
-
-
-                <form action="/" method="post">
-                    <fieldset>
-                        <legend>Formulario de Suscripcion</legend>
-
-
-                        <label for="nombre">Nombre</label>
-                        <input id="nombre" type="text" placeholder="Ingrese su nombre">
-
-                        <label for="email">Email</label>
-                        <input id="email" type="email" required placeholder="ejemplo@gmail.com">
-
-                        <label for="consulta">Consulta</label>
-                        <input id="consulta" type="text">
+                    <section id="contacto" class="contacto">
 
 
 
-
-                        <input type="submit" value="Enviar Formulario">
-                        <input type="reset" value="Resetear Formulario">
-
-                    </fieldset>
+                        <form action="/" method="post">
+                            <fieldset>
+                                <legend>Formulario de Suscripcion</legend>
 
 
-                </form>
+                                <label for="nombre">Nombre</label>
+                                <input id="nombre" type="text" placeholder="Ingrese su nombre">
 
-            </section>
+                                <label for="email">Email</label>
+                                <input id="email" type="email" required placeholder="ejemplo@gmail.com">
+
+                                <label for="consulta">Consulta</label>
+                                <input id="consulta" type="text">
+
+
+
+
+                                <input type="submit" value="Enviar Formulario">
+                                <input type="reset" value="Resetear Formulario">
+
+                            </fieldset>
+
+
+                        </form>
+
+                    </section>
+
+                </div>
+
+            </div>
 
         </div>
 
