--- a/pages/Fotos.html
+++ b/pages/Fotos.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="hidromiel, miel, bebidadevikingos, vikingos, fermentacion, bebidas">
+
+    <meta name="description" content="Podes ver fotos de la produccion de hidromiel">
     <link rel="shortcut icon" href="../Imagenes/logo.jpg">
-    <title>Fotos</title>
+    <title>Fotos de Producción</title>
     <!--Google Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
