--- a/pages/Historia.html
+++ b/pages/Historia.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="hidromiel, miel, bebidadevikingos, vikingos, fermentacion, bebidas">
+    <meta name="description" content="Aca te podes enterar un poco de la historia que posee la hidromiel desde sus origenes">
     <link rel="shortcut icon" href="../Imagenes/logo.jpg">
     <title>Historia</title>
     <!--Google Font-->
