--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,6 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="hidromiel, miel, bebidadevikingos, vikingos, fermentacion, bebidas">
+    <meta name="description" content="Por este medio podes contactarte con nosotros y pedir tu hidromiel, tenes todos nuestros medios de comunicacion">
+
     <link rel="shortcut icon" href="../Imagenes/logo.jpg">
     <title>Contacto</title>
     <!--Google Font-->
