--- a/pages/produccion.html
+++ b/pages/produccion.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="hidromiel, miel, bebidadevikingos, vikingos, fermentacion, bebidas">
+    <meta name="description" content="Te contamos y mostramos como fabricamos la mead paso a paso, con un video explicativo">
     <link rel="shortcut icon" href="../Imagenes/logo.jpg">
-    <title>Produccion</title>
+    <title>Producción de la Meed</title>
     <!--Google Font-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
