--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="hidromiel, miel, bebidadevikingos, vikingos, fermentacion, bebidas">
+    <meta name="description" content="Freyr Hidromiel es una empresa familiar que se dedica a fabricar hidromiel artesanal, con miel de Cordoba">
     <link rel="shortcut icon" href="./Imagenes/logo.jpg">
     <title>Freyr Hidromiel Web</title>
     <!--Google Font-->
